--- a/app/views/front/browse/_contents.html.erb
+++ b/app/views/front/browse/_contents.html.erb
@@ -1,6 +1,6 @@
 <script>
   $("body").removeClass("background-grey");
-  $(".browser-contents").attr('style','margin-top:16.5vh;');
+  $(".browser-contents").attr('style','margin-top:90px;');
 </script>
 	<% i=1
     @merchant.each do |record|
