--- a/app/views/front/items/_contents.html.erb
+++ b/app/views/front/items/_contents.html.erb
@@ -1,7 +1,7 @@
 <script>
   $("body").addClass("background-grey");
   $("#loading").show();
-  $(".browser-contents").attr('style','margin-top:16.5vh;');
+  $(".browser-contents").attr('style','margin-top:90px;');
   window.location.hash = "";
 </script>
 <div id="loading" style="width:100%;height:105%;background: url(/assets/loading.svg) no-repeat center;"></div>
