--- a/app/views/front/likelist/_contents-item-frame.html.erb
+++ b/app/views/front/likelist/_contents-item-frame.html.erb
@@ -15,6 +15,6 @@
   <%= render "front/items/contents" %>
 </div>
 <script>
-    $(".browser-contents").attr('style','margin-top:8vh;height:84%;');
+    $(".browser-contents").attr('style','margin-top:44px;height:88%;');
     $(".contents-end").hide();
 </script>
