--- a/app/views/front/likelist/_contents-shop-frame.html.erb
+++ b/app/views/front/likelist/_contents-shop-frame.html.erb
@@ -14,5 +14,5 @@
   <%= render "front/browse/contents" %>
 </div>
 <script>
-    $(".browser-contents").attr('style','margin-top:8vh;height:84%;');
+    $(".browser-contents").attr('style','margin-top:44px;height:88%;');
 </script>
