--- a/app/views/front/home/_promotion_block.html.erb
+++ b/app/views/front/home/_promotion_block.html.erb
@@ -4,7 +4,7 @@
 </script>
 
 <% @render_hash.each do |k,v| %>
-<div id="<%=k.title%>" class="promotion-block" style="background:<%=k.background%> repeat top;background-size:50%;">
+<div id="<%=k.title%>" class="promotion-block" style="background:<%=k.banner_background%> repeat top;background-size:50%;">
   <div class="promotion-header" style="background:url('<%=k.banner_url%>') no-repeat top; background-size:100% 100%;">
   </div>
   <div class="promotion-sample">
