--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -611,7 +611,7 @@ margin-top:90px;
   height:90%;
 }
 .promotion-item-image{
-  height:150px;
+  height:75%;
 }
 .promotion-item-detail{
   white-space:nowrap;
