ga settign promo

--- a/app/views/front/frame/_footer.html.erb
+++ b/app/views/front/frame/_footer.html.erb
@@ -5,7 +5,7 @@
   <span class="glyphicon glyphicon-heart" name=likeitem onclick="section_transfer('likeitem');ga('send','event','section','move','likeitem');"></span>
 </div>
 <div class="footer-button homelist">
-  <span class="glyphicon glyphicon-send" name="home" onclick="section_transfer('home');"></span>
+  <span class="glyphicon glyphicon-send" name="home" onclick="section_transfer('home');ga('send','event','section','move','home');"></span>
 </div>
 <div class="footer-button shoplist" >
   <span class="glyphicon glyphicon-home" name=shop onclick="section_transfer('shop');ga('send','event','section','move','shop');"></span>
