--- a/app/views/front/modal/_promotion.html.erb
+++ b/app/views/front/modal/_promotion.html.erb
@@ -11,7 +11,7 @@
 
       <div class="body-divide">
         <% @product1.each do |record| %>
-            <a href="<%=record.url%>" onclick="ga('send','event','shop-popup','outlink','<%=record.id%>');">
+            <a href="<%=record.url%>" onclick="ga('send','event','promotion-popup','outlink','<%=record.id%>');">
               <div class="modal-product-item">
                 <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
                 <% if !record.productswithpromotion.nil?%>
@@ -23,11 +23,11 @@
                 <% end %>
             </a>
             <% if !@userlikeitems.include?(record.id)%>
-                <div class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','shop-popup','like','<%=record.id%>');"></div>
+                <div class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','promotion-popup','like','<%=record.id%>');"></div>
             <% else %>
-                <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','shop-popup','like','<%=record.id%>');"></div>
+                <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','promotion-popup','like','<%=record.id%>');"></div>
             <% end %>
-            <a href="<%=record.url%>" onclick="ga('send','event','shop-popup','outlink','<%=record.id%>');">
+            <a href="<%=record.url%>" onclick="ga('send','event','promotion-popup','outlink','<%=record.id%>');">
               <div class="modal-product-detail">
                 <span><%=record.title%></span><br>
                 <span class="product-price"><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
@@ -39,7 +39,7 @@
         </div>
     <div class="body-divide">
       <% @product2.each do |record| %>
-          <a href="<%=record.url%>" onclick="ga('send','event','shop-popup','outlink','<%=record.id%>');">
+          <a href="<%=record.url%>" onclick="ga('send','event','','outlink','<%=record.id%>');">
             <div class="modal-product-item">
               <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
               <% if !record.productswithpromotion.nil?%>
@@ -51,11 +51,11 @@
               <% end %>
           </a>
           <% if !@userlikeitems.include?(record.id)%>
-              <div class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','shop-popup','like','<%=record.id%>');"></div>
+              <div class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','promotion-popup','like','<%=record.id%>');"></div>
           <% else %>
-              <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','shop-popup','like','<%=record.id%>');"></div>
+              <div class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','promotion-popup','like','<%=record.id%>');"></div>
           <% end %>
-          <a href="<%=record.url%>" onclick="ga('send','event','shop-popup','outlink','<%=record.id%>');">
+          <a href="<%=record.url%>" onclick="ga('send','event','promotion-popup','outlink','<%=record.id%>');">
             <div class="modal-product-detail">
               <span><%=record.title%></span><br>
               <span class="product-price"><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
