--- a/app/views/front/frame/_footer.html.erb
+++ b/app/views/front/frame/_footer.html.erb
@@ -13,6 +13,10 @@
 <div class="footer-button likeshoplist">
   <span class="glyphicon glyphicon-star" name="likeshop" onclick="section_transfer('likeshop');ga('send','event','section','move','likeshop');"></span>
 </div>
+<div class="footer-alarm" onclick="alarm_close(this);">
+  <div>특가할인정보</div>
+  <div></div>
+</div>
 
 <script>
     function section_transfer(menu){
@@ -36,6 +40,9 @@
         }
         window.scrollTo(0,0);
 
+    }
+    function alarm_close(a){
+        $(a).hide();
     }
 
 </script>
