--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,18 +3,7 @@
   <head>
     <% if @test!='test'%>
     <!-- Google Analytics Content Experiment code -->
-    <script>function utmx_section(){}function utmx(){}(function(){var
-        k='151747194-1',d=document,l=d.location,c=d.cookie;
-        if(l.search.indexOf('utm_expid='+k)>0)return;
-        function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
-        indexOf(';',i);return escape(c.substring(i+n.length+1,j<0?c.
-            length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;d.write(
-            '<sc'+'ript src="'+'http'+(l.protocol=='https:'?'s://ssl':
-                '://www')+'.google-analytics.com/ga_exp.js?'+'utmxkey='+k+
-            '&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
-            valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
-            '" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
-    </script><script>utmx('url','A/B');</script>
+
     <!-- End of Google Analytics Content Experiment code -->
     <% end %>
     <title>mariazu</title>
@@ -25,7 +14,6 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
     <script>
         function getCookie(cname) {
             var name = cname + "=";
@@ -55,13 +43,15 @@
           });
           return true;
       };
+        var customUserId = '<%= current_user.identities.first.provider.first+current_user.identities.first.uid%>';
       //구글어낼러틱스 호출
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
               (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-96186716-1', 'auto');
+      ga('create', 'UA-96186716-1', {'userId': customUserId});
+      ga('require', 'displayfeatures');
+      ga('set', 'dimension1', customUserId);                // Set a `customUserId` dimension at page level
       ga('send', 'pageview');
     //address-bar hide
 
