--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,9 @@
           });
           return true;
       };
+      <% if !current_user.nil? %>
         var customUserId = '<%= current_user.identities.first.provider.first+current_user.identities.first.uid%>';
+      <% end %>
       //구글어낼러틱스 호출
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
               (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
