--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
       <% if !current_user.nil? %>
         var customUserId = '<%= current_user.identities.first.provider.first+current_user.identities.first.uid%>';
       <% else %>
-        var customerUserId = undefined;
+        var customUserId = undefined;
       <% end %>
       //구글어낼러틱스 호출
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
