--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
     <meta property="og:description" content="당신의 식탁을 완성할 테이블웨어를 찾아보세요">
     <meta property="og:image" content="http://mariazu.co/assets/intro/logos/mariazu.png">
     <meta property="og:url" content="http://mariazu.co">
+    <meta name="naver-site-verification" content="135ad5e41ad3c7ede06d7357b1930fb67fc4ca71"/>
+    <!-- Google Analytics Content Experiment code -->
 
     <%= csrf_meta_tags %>
 
