--- a/app/views/front/modal/intro/_intro.html.erb
+++ b/app/views/front/modal/intro/_intro.html.erb
@@ -22,7 +22,7 @@
         </div>
         <div class="face-pick" style="display:none">
           <div class="pick" id="style">
-            <div class="pick-header">어떤 스타일의 테이블웨어 마리아쥬를 찾으시나요?</div>
+            <div class="pick-header">어떤 스타일의 테이블웨어 마리아주를 찾으시나요?</div>
             <div class="pick-box">
               <% @style_list.each do |tag|%>
               <div class="pick-button" onclick="call_category('<%=tag%>');intro_pick(this,'style','<%=tag%>');ga('send','event','intro','move','intro2');"><span><%=tag%></span></div>
