--- a/app/views/front/frame/_footer.html.erb
+++ b/app/views/front/frame/_footer.html.erb
@@ -13,7 +13,7 @@
 <div class="footer-button likeshoplist">
   <span class="glyphicon glyphicon-star" name="likeshop" onclick="section_transfer('likeshop');ga('send','event','section','move','likeshop');"></span>
 </div>
-<div class="footer-alarm" onclick="alarm_close(this);">
+<div class="footer-alarm" style="display: none;" onclick="alarm_close(this);">
   <div>특가할인정보</div>
   <div></div>
 </div>
