--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -281,7 +281,7 @@ margin-bottom:1%;
 position:fixed;
 top:0;
 z-index: 10;
-
+box-shadow: 0px 0px 1px grey;
 }
 
     .itemsearch-button{
@@ -325,14 +325,14 @@ z-index: 10;
 //notibar
 .notibar{
 
-  height: 44px;
+  height: 40px;
   width: 100%;
   position: fixed;
   top: 44px;
-  background: #e9e9e9;
-  z-index: 3;
-  padding:2%;
-  box-shadow: 1px 1px 8px grey;
+  z-index: -1;
+  padding:1.7%;
+  padding-bottom:0;
+
 
 }
 .noti-tag{
@@ -351,22 +351,42 @@ z-index: 10;
 .noti-button{
   width:28%;
   height:100%;
-  border:white 1px solid;
+  border:rgba(0,0,0,0.2) 1px solid;
   border-radius:6px;
-  background:rgb(201,201,201);
+  background:white;
   float:left;
   display: table;
+  margin-right:1%;
+  color: rgba(0,0,0,0.5);
 }
-.noti-button:active{
-  background:rgba(0,0,0,0.5);
+.noti-button>span:active{
+  background:#c9c9c9;
+  color:white;
 }
 .noti-button>span{
   display: table-cell;
   vertical-align: middle;
   text-align: center;
-  color:white;
+}
+.noti-button>span:last-child{
+  border-right:0;
+}
+.sort-active{
+  background: #a7c9a9;
+  color: white;
 }
 
+.noti-scroll{
+  float:right;
+  width:35px;
+  height:35px;
+  background:white;
+  border-radius:100%;
+  line-height: 250%;
+  text-align: center;
+  color: rgba(0,0,0,0.3);
+  border:1px solid rgba(0,0,0,0.3);
+}
 //search - notibar replce
 .search-input{
   float:left;
@@ -399,6 +419,7 @@ z-index: 10;
   line-height:40px;
   width:15%;
   height:100%;
+  font-weight:500;
 }
 
 // tag-browser
@@ -416,7 +437,7 @@ z-index: 10;
   overflow-x: auto;
   padding: 1%;
   z-index: 3;
-  box-shadow: 1px 1px 8px grey;
+  box-shadow: 1px 1px 8px rgba(0,0,0,0.2);
 
 }
 
@@ -455,6 +476,7 @@ height:78%;
 width:100%;
 -webkit-overflow-scrolling: touch;
 margin-top:90px;
+  padding:1%;
 
 
 }
